--- a/book.html
+++ b/book.html
@@ -14,6 +14,8 @@
     href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap"
     rel="stylesheet"
   />
+  <style></style>
+  <script src=""></script>
   <body>
     <header>
       <h1>B.A. BEAUTY AESTHETIC</h1>
@@ -27,9 +29,7 @@
       </nav>
     </header>
 
-    <main id="main">
-     
-    </main>
+    <main></main>
     <footer>
       <nav class="social">
         <ul>
@@ -53,5 +53,4 @@
       </nav>
     </footer>
   </body>
-  <script src="slideshowIndex.js"></script>
 </html>
