--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap"
     rel="stylesheet"
   />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&amp;display=swap"
+    rel="stylesheet"
+  />
+
   <body>
     <header>
       <h1>B.A. BEAUTY AESTHETIC</h1>
@@ -26,31 +32,42 @@
         <button id="booknow">BOOK NOW</button>
       </nav>
     </header>
-
-    <main id="main">
-     
+    <main>
+      <div class="container">
+        <div id="mainImg"></div>
+        <div class="centered">
+          At B.A Beauty Aesthetic, we combine Artistry, Science, Innovation an
+          Excellence to deliver tailored aesthetic treatments, that enhance your
+          beauty and wellbeing.
+        </div>
+      </div>
     </main>
+    <nav class="social">
+      <ul>
+        <li>
+          <a href="https://www.facebook.com/b.a.beautyaesthetic/"
+            >Facebook <i class="fa fa-facebook"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/b.abeautyaesthetic/"
+            >Instagram <i class="fa fa-instagram"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcRwRPzPrsJkDQVpTJjDrlcjjDMbzVpwfjGFnSlrFrLBxNnlWZXwkZPhKvkSDLcRmMNfxDTdD"
+            >Gmail <i class="fa fa-google"></i
+          ></a>
+        </li>
+      </ul>
+    </nav>
     <footer>
-      <nav class="social">
-        <ul>
-          <li>
-            <a href="https://www.facebook.com/b.a.beautyaesthetic/"
-              >Facebook <i class="fa fa-facebook"></i
-            ></a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/b.abeautyaesthetic/"
-              >Instagram <i class="fa fa-instagram"></i
-            ></a>
-          </li>
-          <li>
-            <a
-              href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcRwRPzPrsJkDQVpTJjDrlcjjDMbzVpwfjGFnSlrFrLBxNnlWZXwkZPhKvkSDLcRmMNfxDTdD"
-              >Gmail <i class="fa fa-google"></i
-            ></a>
-          </li>
-        </ul>
-      </nav>
+      <div class="details">
+        <p>+44 7475 916916</p>
+        <p>info.babeautyaesthetic@gmail.com</p>
+        <p id="noBorderFooterEl">92 West End Lane London, NW6 2LU</p>
+      </div>
     </footer>
   </body>
   <script src="slideshowIndex.js"></script>
