--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <p>info.babeautyaesthetic@gmail.com</p>
         <p id="noBorderFooterEl">92 West End Lane London, NW6 2LU</p>
       </div>
+      <p id="copyright">© 2023 B.A. Beauty Aesthetic All Rights Reserved</p>
     </footer>
   </body>
   <script src="slideshowIndex.js"></script>
