--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       <h1>B.A. BEAUTY AESTHETIC</h1>
       <nav>
         <ul id="navUl">
-          <li>ABOUT</li>
-          <li>SERVICES</li>
-          <li>CONTACT ME</li>
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="services.html">SERVICES</a></li>
+          <li><a href="contact.html">CONTACT ME</a></li>
         </ul>
-        <button id="booknow">BOOK NOW</button>
+        <li id="booknow"><a href="book.html">BOOK NOW</a></li>
       </nav>
     </header>
     <main>
