--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
       <h1>B.A. BEAUTY AESTHETIC</h1>
       <nav>
         <ul id="navUl">
-          <li><a href="about.html">ABOUT</a></li>
-          <li><a href="services.html">SERVICES</a></li>
-          <li><a href="contact.html">CONTACT ME</a></li>
+          <img alt="logo" src="images/logo.jpeg" />
+          <li>
+            <a href="about.html">ABOUT</a>
+          </li>
+          <li><a href="services.html">OUR TREATMENTS</a></li>
+          <li><a href="contact.html">PRICE LIST</a></li>
         </ul>
         <li id="booknow"><a href="book.html">BOOK NOW</a></li>
       </nav>
@@ -35,11 +38,15 @@
     <main>
       <div class="container">
         <div id="mainImg"></div>
-        <div class="centered">
+        <!-- <div class="centered">
           At B.A Beauty Aesthetic, we combine Artistry, Science, Innovation an
           Excellence to deliver tailored aesthetic treatments, that enhance your
           beauty and wellbeing.
-        </div>
+        </div> -->
+      </div>
+      <div class="feedbackSection">
+        <h1>Why Customers Love B.A. Beauty Aesthetic</h1>
+        <div class="feedbackContainer"></div>
       </div>
     </main>
     <nav class="social">
