--- a/services.html
+++ b/services.html
@@ -14,43 +14,71 @@
     href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap"
     rel="stylesheet"
   />
-  <style></style>
-  <script src=""></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&amp;display=swap"
+    rel="stylesheet"
+  />
+
   <body>
     <header>
       <h1>B.A. BEAUTY AESTHETIC</h1>
       <nav>
         <ul id="navUl">
-          <li>ABOUT</li>
-          <li>SERVICES</li>
-          <li>CONTACT ME</li>
+          <img alt="logo" src="images/logo.jpeg" />
+          <li>
+            <a href="about.html">ABOUT</a>
+          </li>
+          <li><a href="services.html">OUR TREATMENTS</a></li>
+          <li><a href="contact.html">PRICE LIST</a></li>
         </ul>
-        <button id="booknow">BOOK NOW</button>
+        <li id="booknow"><a href="book.html">BOOK NOW</a></li>
       </nav>
     </header>
-
-    <main></main>
+    <main>
+      <div class="treatments">
+        <h1>Treatments</h1>
+        <p>
+          Explore my range of services and BOOK NOW as there's no better time
+          than the present.
+        </p>
+        <div class="treatmentsContainer">
+          <div class="treatmentCard">
+            <img src="images/index1.jpeg" />
+            <p class="shortDescription">Dermal Fillers</p>
+            <button>Read more</button>
+          </div>
+          <div class="treatmentCard">
+            <img src="images/index1.jpeg" />
+            <p class="shortDescription">Dermal Fillers</p>
+            <button>Read more</button>
+          </div>
+          <div class="treatmentCard">
+            <img src="images/index1.jpeg" />
+            <p class="shortDescription">Dermal Fillers</p>
+            <button>Read more</button>
+          </div>
+          <div class="treatmentCard">
+            <img src="images/index1.jpeg" />
+            <p class="shortDescription">Dermal Fillers</p>
+            <button>Read more</button>
+          </div>
+          <div class="treatmentCard">
+            <img src="images/index1.jpeg" />
+            <p class="shortDescription">Dermal Fillers</p>
+            <button>Read more</button>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer>
-      <nav class="social">
-        <ul>
-          <li>
-            <a href="https://www.facebook.com/b.a.beautyaesthetic/"
-              >Facebook <i class="fa fa-facebook"></i
-            ></a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/b.abeautyaesthetic/"
-              >Instagram <i class="fa fa-instagram"></i
-            ></a>
-          </li>
-          <li>
-            <a
-              href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcRwRPzPrsJkDQVpTJjDrlcjjDMbzVpwfjGFnSlrFrLBxNnlWZXwkZPhKvkSDLcRmMNfxDTdD"
-              >Gmail <i class="fa fa-google"></i
-            ></a>
-          </li>
-        </ul>
-      </nav>
+      <div class="details">
+        <p>+44 7475 916916</p>
+        <p>info.babeautyaesthetic@gmail.com</p>
+        <p id="noBorderFooterEl">92 West End Lane London, NW6 2LU</p>
+      </div>
+      <p id="copyright">© 2023 B.A. Beauty Aesthetic All Rights Reserved</p>
     </footer>
   </body>
+  <script src="slideshowIndex.js"></script>
 </html>
