--- a/services.html
+++ b/services.html
@@ -32,45 +32,70 @@
           <li><a href="services.html">OUR TREATMENTS</a></li>
           <li><a href="contact.html">PRICE LIST</a></li>
         </ul>
-        <li id="booknow"><a href="book.html">BOOK NOW</a></li>
+        <li id="booknow">
+          <a href="https://ba-beauty-aesthetic-limited.square.site/"
+            >BOOK NOW</a
+          >
+        </li>
       </nav>
     </header>
     <main>
       <div class="treatments">
         <h1>Treatments</h1>
-        <p>
+        <h3>
           Explore my range of services and BOOK NOW as there's no better time
           than the present.
-        </p>
-        <div class="treatmentsContainer">
-          <div class="treatmentCard">
-            <img src="images/index1.jpeg" />
-            <p class="shortDescription">Dermal Fillers</p>
-            <button>Read more</button>
-          </div>
-          <div class="treatmentCard">
-            <img src="images/index1.jpeg" />
-            <p class="shortDescription">Dermal Fillers</p>
-            <button>Read more</button>
-          </div>
-          <div class="treatmentCard">
-            <img src="images/index1.jpeg" />
-            <p class="shortDescription">Dermal Fillers</p>
-            <button>Read more</button>
-          </div>
-          <div class="treatmentCard">
-            <img src="images/index1.jpeg" />
-            <p class="shortDescription">Dermal Fillers</p>
-            <button>Read more</button>
-          </div>
-          <div class="treatmentCard">
-            <img src="images/index1.jpeg" />
-            <p class="shortDescription">Dermal Fillers</p>
-            <button>Read more</button>
-          </div>
+        </h3>
+      </div>
+      <div class="treatmentsContainer">
+        <div class="treatmentCard">
+          <img src="images/index1.jpeg" />
+          <p class="shortDescription">Dermal Fillers</p>
+          <button>Read more</button>
+        </div>
+        <div class="treatmentCard">
+          <img src="images/index1.jpeg" />
+          <p class="shortDescription">Anti Wrinkles Injections</p>
+          <p>(Botulinum Toxins)</p>
+          <button>Read more</button>
+        </div>
+        <div class="treatmentCard">
+          <img src="images/index1.jpeg" />
+          <p class="shortDescription">Anti Sweating Injections</p>
+          <button>Read more</button>
+        </div>
+        <div class="treatmentCard">
+          <img src="images/index1.jpeg" />
+          <p class="shortDescription">Skin Rejuvenation</p>
+          <button>Read more</button>
+        </div>
+        <div class="treatmentCard">
+          <img src="images/index1.jpeg" />
+          <p class="shortDescription">Micropigmentation</p>
+          <button>Read more</button>
         </div>
       </div>
     </main>
+    <nav class="social">
+      <ul>
+        <li>
+          <a href="https://www.facebook.com/b.a.beautyaesthetic/"
+            >Facebook <i class="fa fa-facebook"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/b.abeautyaesthetic/"
+            >Instagram <i class="fa fa-instagram"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcRwRPzPrsJkDQVpTJjDrlcjjDMbzVpwfjGFnSlrFrLBxNnlWZXwkZPhKvkSDLcRmMNfxDTdD"
+            >Gmail <i class="fa fa-google"></i
+          ></a>
+        </li>
+      </ul>
+    </nav>
     <footer>
       <div class="details">
         <p>+44 7475 916916</p>
