--- a/about.html
+++ b/about.html
@@ -21,11 +21,21 @@
       <h1>B.A. BEAUTY AESTHETIC</h1>
       <nav>
         <ul id="navUl">
-          <li>ABOUT</li>
-          <li>SERVICES</li>
-          <li>CONTACT ME</li>
+          <img alt="logo" src="images/logo.jpeg" />
+          <li>
+            <a href="index.html">HOME</a>
+          </li>
+          <li>
+            <a href="about.html">ABOUT</a>
+          </li>
+          <li><a href="services.html">OUR TREATMENTS</a></li>
+          <li><a href="pricelist.html">PRICE LIST</a></li>
         </ul>
-        <button id="booknow">BOOK NOW</button>
+        <li id="booknow">
+          <a href="https://ba-beauty-aesthetic-limited.square.site/"
+            >BOOK NOW</a
+          >
+        </li>
       </nav>
     </header>
 
