--- a/index.html
+++ b/index.html
@@ -27,12 +27,19 @@
         <ul id="navUl">
           <img alt="logo" src="images/logo.jpeg" />
           <li>
+            <a href="index.html">HOME</a>
+          </li>
+          <li>
             <a href="about.html">ABOUT</a>
           </li>
           <li><a href="services.html">OUR TREATMENTS</a></li>
-          <li><a href="contact.html">PRICE LIST</a></li>
+          <li><a href="pricelist.html">PRICE LIST</a></li>
         </ul>
-        <li id="booknow"><a href="book.html">BOOK NOW</a></li>
+        <li id="booknow">
+          <a href="https://ba-beauty-aesthetic-limited.square.site/"
+            >BOOK NOW</a
+          >
+        </li>
       </nav>
     </header>
     <main>
