--- a/pricelist.html
+++ b/pricelist.html
@@ -42,43 +42,7 @@
         </li>
       </nav>
     </header>
-    <main>
-      <div class="treatments">
-        <h1>Treatments</h1>
-        <h3>
-          Explore my range of services and BOOK NOW as there's no better time
-          than the present.
-        </h3>
-      </div>
-      <div class="treatmentsContainer">
-        <div class="treatmentCard">
-          <img src="images/dermalfiller.jpeg" />
-          <p class="shortDescription">Dermal Fillers</p>
-          <button>Read more</button>
-        </div>
-        <div class="treatmentCard">
-          <img src="images/antiwrinkles.jpeg" />
-          <p class="shortDescription">Anti Wrinkles Injections</p>
-          <p>(Botulinum Toxins)</p>
-          <button>Read more</button>
-        </div>
-        <div class="treatmentCard">
-          <img src="images/antisweating.jpeg" />
-          <p class="shortDescription">Anti Sweating Injections</p>
-          <button>Read more</button>
-        </div>
-        <div class="treatmentCard">
-          <img src="images/skinreju.jpeg" />
-          <p class="shortDescription">Skin Rejuvenation</p>
-          <button>Read more</button>
-        </div>
-        <div class="treatmentCard">
-          <img src="images/micropig.jpeg" />
-          <p class="shortDescription">Micropigmentation</p>
-          <button>Read more</button>
-        </div>
-      </div>
-    </main>
+    <main></main>
     <nav class="social">
       <ul>
         <li>
