--- a/about.html
+++ b/about.html
@@ -14,8 +14,12 @@
     href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap"
     rel="stylesheet"
   />
-  <style></style>
-  <script src=""></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&amp;display=swap"
+    rel="stylesheet"
+  />
+
   <body>
     <header>
       <h1>B.A. BEAUTY AESTHETIC</h1>
@@ -38,29 +42,58 @@
         </li>
       </nav>
     </header>
-
-    <main></main>
+    <main>
+      <main>
+        <div class="containerAbout">
+          <div class="imagesAbout">
+            <img id="img1" src="images/about.jpeg" />
+            <img id="img2" src="images/about2.jpeg" />
+          </div>
+          <div class="about">
+            At B.A Beauty Aesthetic, we combine Artistry, Science, Innovation an
+            Excellence to deliver tailored aesthetic treatments, that enhance
+            your beauty and wellbeing. Catalina Beatrice is an experienced
+            Aesthetic practitioner with advanced and masterclass training in
+            Aesthetic, Dermal fillers, Botulinum toxins, skin rejuvenation. With
+            her background as a Dental Nurse (GDC registered) she established
+            the B.A Beauty Aesthetic in 2019 combining Artistry, Innovation and
+            Excellence, to deliver tailored and effective aesthetic treatments,
+            that enhance beauty and wellbeing. Her aim is to artistically
+            enhance your appearance, minimizing the signs of ageing so that
+            others will only notice a fresher, more youthful and rejuvenated
+            you.
+          </div>
+        </div>
+      </main>
+    </main>
+    <nav class="social">
+      <ul>
+        <li>
+          <a href="https://www.facebook.com/b.a.beautyaesthetic/"
+            >Facebook <i class="fa fa-facebook"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/b.abeautyaesthetic/"
+            >Instagram <i class="fa fa-instagram"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcRwRPzPrsJkDQVpTJjDrlcjjDMbzVpwfjGFnSlrFrLBxNnlWZXwkZPhKvkSDLcRmMNfxDTdD"
+            >Gmail <i class="fa fa-google"></i
+          ></a>
+        </li>
+      </ul>
+    </nav>
     <footer>
-      <nav class="social">
-        <ul>
-          <li>
-            <a href="https://www.facebook.com/b.a.beautyaesthetic/"
-              >Facebook <i class="fa fa-facebook"></i
-            ></a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/b.abeautyaesthetic/"
-              >Instagram <i class="fa fa-instagram"></i
-            ></a>
-          </li>
-          <li>
-            <a
-              href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcRwRPzPrsJkDQVpTJjDrlcjjDMbzVpwfjGFnSlrFrLBxNnlWZXwkZPhKvkSDLcRmMNfxDTdD"
-              >Gmail <i class="fa fa-google"></i
-            ></a>
-          </li>
-        </ul>
-      </nav>
+      <div class="details">
+        <p>+44 7475 916916</p>
+        <p>info.babeautyaesthetic@gmail.com</p>
+        <p id="noBorderFooterEl">92 West End Lane London, NW6 2LU</p>
+      </div>
+      <p id="copyright">© 2023 B.A. Beauty Aesthetic All Rights Reserved</p>
     </footer>
   </body>
+  <script src="slideshowIndex.js"></script>
 </html>
