--- a/services.html
+++ b/services.html
@@ -47,7 +47,7 @@
         <h1>Treatments</h1>
         <h3>
           Explore my range of services and BOOK NOW as there's no better time
-          than the present. now
+          than the present. now now
         </h3>
       </div>
       <div class="treatmentsContainer">
